@@ -20,6 +20,7 @@
     }
   },
   "mob": "minecraft:ghast",
+  "syringe": 1,
   "result": {
     "item": "rftoolsutility:flight_module"
   }
