@@ -16,24 +16,31 @@ import javax.annotation.Nonnull;
 public class SyringeBasedRecipe extends ShapedRecipe {
 
     private final ResourceLocation mobId;
+    private final int syringeIndex;
 
-    public SyringeBasedRecipe(ResourceLocation id, String group, int width, int height, NonNullList<Ingredient> ingredients, ItemStack result, ResourceLocation mobId) {
-        super(id, group, width, height, addMob(ingredients, mobId), result);
+    public SyringeBasedRecipe(ResourceLocation id, String group, int width, int height, NonNullList<Ingredient> ingredients, ItemStack result, ResourceLocation mobId, int syringeIndex) {
+        super(id, group, width, height, addMob(ingredients, mobId, syringeIndex), result);
         this.mobId = mobId;
+        this.syringeIndex = syringeIndex;
     }
 
-    public SyringeBasedRecipe(ShapedRecipe other, ResourceLocation mobId) {
-        super(other.getId(), other.getGroup(), other.getWidth(), other.getHeight(), addMob(other.getIngredients(), mobId), other.getResultItem());
+    public SyringeBasedRecipe(ShapedRecipe other, ResourceLocation mobId, int syringeIndex) {
+        super(other.getId(), other.getGroup(), other.getWidth(), other.getHeight(), addMob(other.getIngredients(), mobId, syringeIndex), other.getResultItem());
         this.mobId = mobId;
+        this.syringeIndex = syringeIndex;
     }
 
-    private static NonNullList<Ingredient> addMob(NonNullList<Ingredient> input, ResourceLocation mobId) {
+    private static NonNullList<Ingredient> addMob(NonNullList<Ingredient> input, ResourceLocation mobId, int syringeIndex) {
         NonNullList<Ingredient> output = NonNullList.withSize(input.size(), Ingredient.EMPTY);
         for (int i = 0 ; i < input.size() ; i++) {
             Ingredient ingredient = input.get(i);
-            if (!ingredient.isEmpty() && ingredient.getItems().length > 0 && ingredient.getItems()[0].getItem() instanceof SyringeItem) {
-                ItemStack syringe = SyringeItem.createMobSyringe(mobId);
-                ingredient = Ingredient.of(syringe);
+            if (syringeIndex == i) {
+                if (!ingredient.isEmpty() && ingredient.getItems().length > 0 && ingredient.getItems()[0].getItem() instanceof SyringeItem) {
+                    ItemStack syringe = SyringeItem.createMobSyringe(mobId);
+                    ingredient = Ingredient.of(syringe);
+                } else {
+                    throw new RuntimeException("Bad recipe. Index " + syringeIndex + " does not point to syringe!");
+                }
             }
             output.set(i, ingredient);
         }
@@ -69,5 +76,9 @@ public class SyringeBasedRecipe extends ShapedRecipe {
     @Override
     public IRecipeSerializer<?> getSerializer() {
         return EnvironmentalModule.SYRINGE_SERIALIZER.get();
+    }
+
+    public int getSyringeIndex() {
+        return syringeIndex;
     }
 }
