@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed the blindness module recipe
+
 1.16-3.1.15:
 - Fixed missing recipe for the destination analyzer
 
